--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 								target="_blank">style.css</a></p>
 					<p style="margin-left:-1.5px">└─<span class="line">─</span> Final-Project</p>
 					<p>&nbsp;&nbsp;
-						<span class="branch">└─ <a href="/DI-Bootcamp-Stage1/Final-Project/index.html"
+						<span class="branch">└─ <a href="DI-Bootcamp-Stage1/Final-Project/index.html"
 								target="_blank">index.html</a>
 					</p>
 					<p>&nbsp;&nbsp;
@@ -218,161 +218,74 @@
 							d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
 					</svg></button>
 				<section id="Full-Stack-Coding-Bootcamp-JavaScript">
-					<div class="h5 mb-0 sticky-header">Full Stack Coding Bootcamp - JavaScript</div>
+					<div class="h5 mb-0">Full Stack Coding Bootcamp - JavaScript</div>
+					<!-- week 1 day 2 -->
 					<p>│<span class="line">──</span> Week 1 - Web development Basics</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="line">── Day 2</p>
-					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-									Exercises XP</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day2/ExercisesXP/style.css" target="_blank">style.css</a></p>
-					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-									Exercises XP Gold</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day2/ExercisesXPGold/index.html" target="_blank">index.html</a>
-					</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day2/ExercisesXPGold/style.css" target="_blank">style.css</a></p>
-
-					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-									Daily Challenge</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day2/DailyChallenge/index.html" target="_blank">index.html</a>
-					</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day2/DailyChallenge/style.css" target="_blank">style.css</a></p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day2/DailyChallenge/main.js" target="_blank">main.js</a></p>
-					<p>│<span class="branch">│<span class="branch">│<span class="line">── Day 4</p>
-					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-									Exercises XP</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day4/ExercisesXP/index.html" target="_blank">index.html</a></p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day4/ExercisesXP/style.css" target="_blank">style.css</a></p>
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Exercises XP Gold</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXPGold/index.html" target="_blank">index.html</a> -->
-					<!-- </p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXPGold/style.css" target="_blank">style.css</a></p> -->
-					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-									Exercises XP Ninja</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day4/ExercisesXPNinja/index.html" target="_blank">index.html</a>
-					</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day4/ExercisesXPNinja/style.css" target="_blank">style.css</a></p>
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Daily Challenge</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/DailyChallenge/index.html" target="_blank">index.html</a> -->
-					<!-- </p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/DailyChallenge/style.css" target="_blank">style.css</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day5/DailyChallenge/main.js" target="_blank">main.js</a></p> -->
-					<p>│<span class="branch">│<span class="branch">│<span class="line">── Day 5</p>
-					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-									Exercises XP</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span>other files</p>
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Exercises XP Gold</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day5/ExercisesXPGold/index.html" target="_blank">index.html</a> -->
-					<!-- </p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day5/ExercisesXPGold/style.css" target="_blank">style.css</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Exercises XP Ninja</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day5/ExercisesXPNinja/index.html" target="_blank">index.html</a> -->
-					<!-- </p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day5/ExercisesXPNinja/style.css" target="_blank">style.css</a></p> -->
-					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-									Daily Challenge</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day5/DailyChallenge/index.html" target="_blank">index.html</a>
-					</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day5/DailyChallenge/style.css" target="_blank">style.css</a></p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-								</span><a href="Week1/Day5/DailyChallenge/main.js" target="_blank">main.js</a></p>
+					<p>│&emsp;&emsp;│── Day 2</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week1/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week1/Day2/ExercisesXP/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week1/Day2/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week1/Day2/ExercisesXPGold/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week1/Day2/DailyChallenge/index.html"target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week1/Day2/DailyChallenge/style.css"target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week1/Day2/DailyChallenge/main.js"target="_blank">main.js</a></p>	
+					<!-- week 1 day 4 -->
+					<p>│&emsp;&emsp;│── Day 4</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week1/Day4/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week1/Day4/ExercisesXP/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Exercises XP Ninja</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week1/Day4/ExercisesXPNinja/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week1/Day4/ExercisesXPNinja/style.css" target="_blank">style.css</a></p>		
+					<!-- week 1 day 5 -->
+					<p>│&emsp;&emsp;<span class="shiftBack"></span>└─ Day 5</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;&emsp;└─ <a href="Week1/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;&emsp;└─ <a href="Week1/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;&emsp;└─ other files</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─ <a href="Week1/Day5/DailyChallenge/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─ <a href="Week1/Day5/DailyChallenge/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─ <a href="Week1/Day5/DailyChallenge/main.js" target="_blank">main.js</a></p>
+					<!-- week 2 day 2 -->
 					<p>│<span class="line">──</span> Week 2 - Web development Basics</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="line">── Day 2</p>
-					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-					Exercises XP</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week2/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week2/Day2/ExercisesXP/style.css" target="_blank">style.css</a></p>
-					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-					Exercises XP Gold</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week2/Day2/ExercisesXPGold/index1.html" target="_blank">index1.html</a>
-					</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week2/Day2/ExercisesXPGold/style1.css" target="_blank">style1.css</a></p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week2/Day2/ExercisesXPGold/index2.html" target="_blank">index2.html</a>
-					</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week2/Day2/ExercisesXPGold/style2.css" target="_blank">style2.css</a></p>
-					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-					Exercises XP Ninja</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week2/Day2/ExercisesXPNinja/index.html" target="_blank">index.html</a>
-					</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week2/Day2/ExercisesXPNinja/style.css" target="_blank">style.css</a></p>
-					<p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">──
-					Daily Challenge</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week2/Day2/DailyChallenge/index.html" target="_blank">index.html</a>
-					</p>
-					<p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─
-					</span><a href="Week2/Day2/DailyChallenge/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;│── Day 2</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week2/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week2/Day2/ExercisesXP/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week2/Day2/ExercisesXPGold/index1.html" target="_blank">index1.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week2/Day2/ExercisesXPGold/style1.css" target="_blank">style1.css</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week2/Day2/ExercisesXPGold/index2.html" target="_blank">index2.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week2/Day2/ExercisesXPGold/style2.css" target="_blank">style2.css</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;&emsp;└─	<a href="Week2/Day2/ExercisesXPNinja/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;&emsp;└─	<a href="Week2/Day2/ExercisesXPNinja/style.css" target="_blank">style.css</a></p>										
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week2/Day2/DailyChallenge/index.html"target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week2/Day2/DailyChallenge/style.css"target="_blank">style.css</a></p>
+					<!-- week 2 day 4 -->
+					<p>│&emsp;&emsp;<span class="shiftBack"></span>└─ Day 4</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week2/Day4/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week2/Day4/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="Week2/Day4/ExercisesXPNinja/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week2/Day4/DailyChallenge/index.html"target="_blank">index.html</a></p>
+					<!-- week 3 day 2 -->
+					<p>│<span class="line">──</span> Week 3 - Javascript</p>
+					<p>│&emsp;&emsp;│── Day 2</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week3/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
 
-					<!-- #region DAY example ################################################-->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="line">── Day 5</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Exercises XP</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXP/index.html" target="_blank">index.html</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXP/style.css" target="_blank">style.css</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Exercises XP Gold</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXPGold/index.html" target="_blank">index.html</a> -->
-					<!-- </p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXPGold/style.css" target="_blank">style.css</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Exercises XP Ninja</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXPNinja/index.html" target="_blank">index.html</a> -->
-					<!-- </p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/ExercisesXPNinja/style.css" target="_blank">style.css</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch"></span>│<span class="branch">│<span class="line">── -->
-					<!-- Daily Challenge</p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/DailyChallenge/index.html" target="_blank">index.html</a> -->
-					<!-- </p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/DailyChallenge/style.css" target="_blank">style.css</a></p> -->
-					<!-- <p>│<span class="branch">│<span class="branch">│<span class="branch"></span>│<span class="branch">└─ -->
-					<!-- </span><a href="Week1/Day4/DailyChallenge/main.js" target="_blank">main.js</a></p> -->
-					<!-- #endregion DAY example  ################################################-->
+
+
+
 				</section>
 				<button type="button" class="btn btn-warning sticky-top col-7 my-2" data-bs-toggle="collapse"
 					data-bs-target="#Self-paced-Courses-exercises">Self-paced Courses exercises
