--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 					<div class="h5 mb-0">Full Stack Coding Bootcamp - JavaScript</div>
 					<!-- week 1 day 2 -->
 					<p>│<span class="line">──</span> Week 1 - Web development Basics</p>
-					<p>│&emsp;&emsp;│── Day 2</p>
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week1/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week1/Day2/ExercisesXP/style.css" target="_blank">style.css</a></p>
@@ -233,7 +233,7 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week1/Day2/DailyChallenge/style.css"target="_blank">style.css</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week1/Day2/DailyChallenge/main.js"target="_blank">main.js</a></p>	
 					<!-- week 1 day 4 -->
-					<p>│&emsp;&emsp;│── Day 4</p>
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week1/Day4/ExercisesXP/index.html" target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week1/Day4/ExercisesXP/style.css" target="_blank">style.css</a></p>
@@ -252,7 +252,7 @@
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─ <a href="Week1/Day5/DailyChallenge/main.js" target="_blank">main.js</a></p>
 					<!-- week 2 day 2 -->
 					<p>│<span class="line">──</span> Week 2 - Web development Basics</p>
-					<p>│&emsp;&emsp;│── Day 2</p>
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week2/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week2/Day2/ExercisesXP/style.css" target="_blank">style.css</a></p>
@@ -279,10 +279,16 @@
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week2/Day4/DailyChallenge/index.html"target="_blank">index.html</a></p>
 					<!-- week 3 day 2 -->
 					<p>│<span class="line">──</span> Week 3 - Javascript</p>
-					<p>│&emsp;&emsp;│── Day 2</p>
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week3/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
-
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week3/Day2/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week3/Day2/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week3/Day2/DailyChallenge/script.js"target="_blank">script.js</a></p>
+								
 
 
 
