--- a/index.html
+++ b/index.html
@@ -288,8 +288,11 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week3/Day2/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week3/Day2/DailyChallenge/script.js"target="_blank">script.js</a></p>
-								
-
+					<!-- week 3 day 4 -->				
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week3/Day4/ExercisesXP/script.js" target="_blank">script.js</a></p>
+					
 
 
 				</section>
