--- a/index.html
+++ b/index.html
@@ -292,7 +292,13 @@
 					<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week3/Day4/ExercisesXP/script.js" target="_blank">script.js</a></p>
-					
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week3/Day4/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week3/Day4/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week3/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
+							
 
 
 				</section>
