--- a/index.html
+++ b/index.html
@@ -298,11 +298,19 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week3/Day4/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week3/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
-					<!-- week 4 day 1 -->		
+					<!-- week 4 day 2 -->		
 					<p>│<span class="line">──</span> Week 4 - Javascript</p>
-					<p>│&emsp;&emsp;│<span class="line"></span>── Day 1</p>
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week4/Day1/ExercisesXP/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week4/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week4/Day2/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week4/Day2/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week4/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
+								
+					
 
 				</section>
 				<button type="button" class="btn btn-warning sticky-top col-7 my-2" data-bs-toggle="collapse"
