--- a/index.html
+++ b/index.html
@@ -308,9 +308,13 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week4/Day2/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week4/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
-								
-					
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week4/Day2/DailyChallenge/script.js"target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week4/Day2/DailyChallenge/script2.js"target="_blank">script2.js</a></p>
+					<!-- week 4 day 4 -->			
+					<p>│<span class="line">──</span> Week 4 - Javascript</p>
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week4/Day4/ExercisesXP/script.js" target="_blank">script.js</a></p>
 
 				</section>
 				<button type="button" class="btn btn-warning sticky-top col-7 my-2" data-bs-toggle="collapse"
