--- a/index.html
+++ b/index.html
@@ -320,7 +320,11 @@
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="Week4/Day4/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week4/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
-							
+					<!-- week 4 day 5 -->			
+					<p>│&emsp;&emsp;<span class="shiftBack"></span>└─ Day 4</p>		
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Exercises XP Mini Project : Play The Game</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week4/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week4/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
 						
 				</section>
 				<button type="button" class="btn btn-warning sticky-top col-7 my-2" data-bs-toggle="collapse"
