--- a/index.html
+++ b/index.html
@@ -326,8 +326,10 @@
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week4/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week4/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line">──Exercises XP Gold Mini-Project : Calculator</p>
-					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week4/Day5/ExercisesXPGold/index.html" target="_blank">NOT READY index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week4/Day5/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week4/Day5/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line">──Exercises XP Ninja Mini-Project : Hanging Game</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="Week4/Day5/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week4/Day5/DailyChallenge/script.js"target="_blank">script.js</a></p>
 							
