--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1"> <!-- for mobile -->
-	<title>index</title>
+	<title>Roman D-Bootcamp</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
@@ -331,7 +331,11 @@
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="Week4/Day5/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week4/Day5/DailyChallenge/script.js"target="_blank">script.js</a></p>
-							
+					<!-- week 5 day 2 -->		
+					<p>│<span class="line">──</span> Week 5 - DOM</p>
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>		
 				</section>
 				<button type="button" class="btn btn-warning sticky-top col-7 my-2" data-bs-toggle="collapse"
 					data-bs-target="#Self-paced-Courses-exercises">Self-paced Courses exercises
