--- a/index.html
+++ b/index.html
@@ -267,61 +267,68 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week2/Day2/DailyChallenge/index.html"target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week2/Day2/DailyChallenge/style.css"target="_blank">style.css</a></p>
 					<!-- week 2 day 4 -->
-					<p>│&emsp;&emsp;<span class="shiftBack"></span>└─ Day 4</p>
-					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
-					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week2/Day4/ExercisesXP/index.html" target="_blank">index.html</a></p>
-					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
-					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week2/Day4/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
-					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
-					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="Week2/Day4/ExercisesXPNinja/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week2/Day4/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week2/Day4/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week2/Day4/ExercisesXPNinja/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week2/Day4/DailyChallenge/index.html"target="_blank">index.html</a></p>
+					<!-- week 2 day 5 -->
+					<p>│&emsp;&emsp;<span class="shiftBack"></span>└─ Day 5</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Exercises XP Portfolio &#9888;</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="DI-Bootcamp-Stage1/Final-Project/index.html" target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
-					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week2/Day4/DailyChallenge/index.html"target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─ <a href="Week2/Day5/DailyChallenge/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─ <a href="Week2/Day5/DailyChallenge/style.css" target="_blank">style.css</a></p>
 					<!-- week 3 day 2 -->
 					<p>│<span class="line">──</span> Week 3 - Javascript</p>
 					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week3/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week3/Day2/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week3/Day2/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge &#9757;</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week3/Day2/DailyChallenge/script.js"target="_blank">script.js</a></p>
 					<!-- week 3 day 4 -->				
 					<p>│&emsp;&emsp;<span class="shiftBack"></span>└─ Day 4</p>
-					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week3/Day4/ExercisesXP/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week3/Day4/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="Week3/Day4/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
-					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack">└─Daily Challenge &#9757;</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week3/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
 					<!-- week 4 day 2 -->		
 					<p>│<span class="line">──</span> Week 4 - Javascript</p>
 					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week4/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week4/Day2/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week4/Day2/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge &#9757;</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week4/Day2/DailyChallenge/script.js"target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week4/Day2/DailyChallenge/script2.js"target="_blank">script2.js</a></p>
 					<!-- week 4 day 4 -->			
 					<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week4/Day4/ExercisesXP/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week4/Day4/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week4/Day4/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge &#9757;</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week4/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
 					<!-- week 4 day 5 -->			
 					<p>│&emsp;&emsp;<span class="shiftBack"></span>└─ Day 5</p>		
-					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Exercises XP Mini Project : Play The Game</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757; Mini Project : Play The Game</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week4/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week4/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line">──Exercises XP Gold Mini-Project : Calculator</p>
@@ -329,13 +336,21 @@
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week4/Day5/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line">──Exercises XP Ninja Mini-Project : Hanging Game</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─	<a href="Week4/Day5/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
-					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack">└─Daily Challenge</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack">└─Daily Challenge  &#9757;</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week4/Day5/DailyChallenge/script.js"target="_blank">script.js</a></p>
 					<!-- week 5 day 2 -->		
 					<p>│<span class="line">──</span> Week 5 - DOM</p>
 					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP</p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/index.html" target="_blank">index.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise1.html" target="_blank">exercise1.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise1.js" target="_blank">exercise1.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise2.html" target="_blank">exercise2.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise2.js" target="_blank">exercise2.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise3.html" target="_blank">exercise3.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise3.js" target="_blank">exercise3.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise4.html" target="_blank">exercise4.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise4.js" target="_blank">exercise4.js</a></p>
+					
 				</section>
 				<button type="button" class="btn btn-warning sticky-top col-7 my-2" data-bs-toggle="collapse"
 					data-bs-target="#Self-paced-Courses-exercises">Self-paced Courses exercises
