--- a/index.html
+++ b/index.html
@@ -350,7 +350,16 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise3.js" target="_blank">exercise3.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise4.html" target="_blank">exercise4.html</a></p>		
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise4.js" target="_blank">exercise4.js</a></p>
-					
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Gold</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line">──Exercises XP Ninja</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week5/Day2/ExercisesXPNinja/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week5/Day2/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge &#9757;</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day2/DailyChallenge/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day2/DailyChallenge/script.js"target="_blank">script.js</a></p>
+
 				</section>
 				<button type="button" class="btn btn-warning sticky-top col-7 my-2" data-bs-toggle="collapse"
 					data-bs-target="#Self-paced-Courses-exercises">Self-paced Courses exercises
