--- a/index.html
+++ b/index.html
@@ -359,7 +359,20 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack">└─Daily Challenge &#9757;</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day2/DailyChallenge/index.html" target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day2/DailyChallenge/script.js"target="_blank">script.js</a></p>
-
+					<!-- week 5 day 4 -->
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 4</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise1.html" target="_blank">exercise1.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise1.js" target="_blank">exercise1.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise2.html" target="_blank">exercise2.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise2.js" target="_blank">exercise2.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise3.html" target="_blank">exercise3.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise3.js" target="_blank">exercise3.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise4.html" target="_blank">exercise4.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise4.js" target="_blank">exercise4.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise5.html" target="_blank">exercise5.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day2/ExercisesXP/exercise5.js" target="_blank">exercise5.js</a></p>
+					
 				</section>
 				<button type="button" class="btn btn-warning sticky-top col-7 my-2" data-bs-toggle="collapse"
 					data-bs-target="#Self-paced-Courses-exercises">Self-paced Courses exercises
