--- a/index.html
+++ b/index.html
@@ -401,7 +401,12 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day4/DailyChallenge/index.html" target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
-					
+					<!-- week 5 day 5 -->
+					<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>── Mini Project #1 - Coloring Game &#9757;</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
 				</section>
 
 				
