--- a/index.html
+++ b/index.html
@@ -403,10 +403,18 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
 					<!-- week 5 day 5 -->
 					<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
-					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>── Mini Project #1 - Coloring Game &#9757;</p>
-					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
-					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
-					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>── Mini Project #1 - Coloring Game &#9757;</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>── Mini Project #2 - Drumset</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXPGold/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge: Todo List  &#9757;</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day5/DailyChallenge/index.html"target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day5/DailyChallenge/script.js"target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day5/DailyChallenge/style.css"target="_blank">style.css</a></p>
 				</section>
 
 				
