--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 				</section>
 				<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
 					data-bs-target="#Week5">Week 5<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
-				<section id="Week5" class="<!--collapse-->">
+				<section id="Week5" class="collapse">
 					<!-- week 5 day 2 -->		
 					<p>│<span class="line"></span>── Week 5 - DOM</p>
 					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
@@ -403,20 +403,33 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day4/DailyChallenge/script.js"target="_blank">script.js</a></p>
 					<!-- week 5 day 5 -->
 					<p>│&emsp;&emsp;<span class="shiftBack"></span></span>└─ Day 5</p>		
-					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>── Mini Project #1 - Coloring Game &#9757;</p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>── Mini Project #2 - Drumset</p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
-					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXPGold/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>── Mini Project #1 - Coloring Game &#9757;</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>── Mini Project #2 - Drumset</p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXPGold/index.html" target="_blank">index.html</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week5/Day5/ExercisesXPGold/style.css" target="_blank">style.css</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge: Todo List  &#9757;</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day5/DailyChallenge/index.html"target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day5/DailyChallenge/script.js"target="_blank">script.js</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week5/Day5/DailyChallenge/style.css"target="_blank">style.css</a></p>
 				</section>
-
+				<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
+					data-bs-target="#Week6">Week 6<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
+				<section id="Week6" class="<!--collapse-->">
+				<!-- week 6 day 2 -->
+					<p>│<span class="line"></span>── Week 6 - DOM</p>
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXP/exercise1.html" target="_blank">exercise1.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXP/exercise1.js" target="_blank">exercise1.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXP/exercise2.html" target="_blank">exercise2.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXP/exercise2.js" target="_blank">exercise2.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXP/exercise3.html" target="_blank">exercise3.html</a></p>		
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXP/exercise3.js" target="_blank">exercise3.js</a></p>
+				</section>
 				
 				</section>
 				<button type="button" class="btn btn-success sticky-top col-7 my-2 text-right" data-bs-toggle="collapse"
