--- a/index.html
+++ b/index.html
@@ -429,6 +429,25 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXP/exercise2.js" target="_blank">exercise2.js</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXP/exercise3.html" target="_blank">exercise3.html</a></p>		
 					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXP/exercise3.js" target="_blank">exercise3.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXPGold/exercise1.html" target="_blank">exercise1.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXPGold/exercise1.js" target="_blank">exercise1.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXPGold/exercise2.html" target="_blank">exercise2.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week6/Day2/ExercisesXPGold/exercise2.js" target="_blank">exercise2.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week6/Day2/ExercisesXPNinja/exercise1.html" target="_blank">exercise1.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week6/Day2/ExercisesXPNinja/exercise1.js" target="_blank">exercise1.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week6/Day2/ExercisesXPNinja/exercise2.html" target="_blank">exercise2.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week6/Day2/ExercisesXPNinja/exercise2.js" target="_blank">exercise2.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week6/Day2/ExercisesXPNinja/exercise3.html" target="_blank">exercise3.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week6/Day2/ExercisesXPNinja/exercise3.js" target="_blank">exercise3.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Letters &#9757;</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week6/Day2/DailyChallenge/exercise1.html"target="_blank">exercise1.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week6/Day2/DailyChallenge/exercise1.js"target="_blank">exercise1.js</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge GitHub </p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week6/Day2/DailyChallenge/exercise2.html"target="_blank">exercise2.html</a></p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week6/Day2/DailyChallenge/exercise2.js"target="_blank">exercise2.js</a></p>
+					
 				</section>
 				
 				</section>
