--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 				</section>
 				<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
 					data-bs-target="#Week6">Week 6<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
-				<section id="Week6" class="<!--collapse-->">
+				<section id="Week6" class="collapse">
 				<!-- week 6 day 2 -->
 					<p>│<span class="line"></span>── Week 6 - DOM</p>
 					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
@@ -444,9 +444,22 @@
 					<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge Letters &#9757;</p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week6/Day2/DailyChallenge/exercise1.html"target="_blank">exercise1.html</a></p>
 					<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week6/Day2/DailyChallenge/exercise1.js"target="_blank">exercise1.js</a></p>
-					
 				</section>
+				<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
+					data-bs-target="#Week7">Week 7<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
+				<section id="Week7" class="<!--collapse-->">
+				<!-- week 7 day 2 -->
+					<p>│<span class="line"></span>── Week 7 - Advanced JavaScript</p>
+					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+					<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week7/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
 				
+				</section>
+
+
+
+
+
 				</section>
 				<button type="button" class="btn btn-success sticky-top col-7 my-2 text-right" data-bs-toggle="collapse"
 					data-bs-target="#Self-paced-Courses-exercises">Self-paced Courses exercises
