--- a/index.html
+++ b/index.html
@@ -475,6 +475,7 @@
 					<p>│&emsp;&emsp;&emsp;&emsp;│<span class="line"></span>── Mini Project Random Quote Generator &#9757;</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week7/Day5/ExercisesXP/index.html" target="_blank">index.html</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week7/Day5/ExercisesXP/script.js" target="_blank">script.js</a></p>
+					<p>│&emsp;&emsp;&emsp;&emsp;│&emsp;└─ <a href="Week7/Day5/ExercisesXP/style.css" target="_blank">style.css</a></p>
 					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week7/Day5/DailyChallenge/script.js"target="_blank">script.js</a></p>
 				</section>
