--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 				</section>
 				<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
 					data-bs-target="#Week7">Week 7<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
-				<section id="Week7" class="<!--collapse-->">
+				<section id="Week7" class="collapse">
 				<!-- week 7 day 2 -->
 					<p>│<span class="line"></span>── Week 7 - Advanced JavaScript</p>
 					<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
@@ -479,8 +479,16 @@
 					<p>│&emsp;&emsp;&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
 					<p>│&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;└─	<a href="Week7/Day5/DailyChallenge/script.js"target="_blank">script.js</a></p>
 				</section>
-
-
+				<div class="week btn-warning sticky-top my-2 row" data-bs-toggle="collapse"
+				data-bs-target="#Week8">Week 8<i class="fa fa-arrow-circle-down" aria-hidden="true"></i></div>
+			<section id="Week8" class="<!--collapse-->">
+				<!-- week 8 day 2 -->
+				<p>│<span class="line"></span>── Week 8 - Advanced JavaScript</p>
+				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week8/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
+				
+			</section>
 
 
 
