--- a/index.html
+++ b/index.html
@@ -487,7 +487,13 @@
 				<p>│&emsp;&emsp;│<span class="line"></span>── Day 2</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP &#9757;</p>
 				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week8/Day2/ExercisesXP/script.js" target="_blank">script.js</a></p>
-				
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Gold</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─ <a href="Week8/Day2/ExercisesXPGold/script.js" target="_blank">script.js</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│<span class="line"></span>──Exercises XP Ninja</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;│&emsp;└─	<a href="Week8/Day2/ExercisesXPNinja/script.js" target="_blank">script.js</a></p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;<span class="shiftBack"></span>└─Daily Challenge &#9757;</p>
+				<p>│&emsp;&emsp;│&emsp;&emsp;&emsp;&emsp;└─	<a href="Week8/Day2/DailyChallenge/script.js"target="_blank">script.js</a></p>
+						
 			</section>
 
 
